--- a/src/form.css
+++ b/src/form.css
@@ -3,14 +3,46 @@
 #root {
   margin-left: auto;
   margin-right: auto;
-  margin-top: 20%;
-  width: 80%; 
+  margin-top: 5%;
+  margin-bottom: auto;
+  height: 50%;
+  width: 70%; 
   text-align: center;
-  border: 2px solid black;
-  border-radius: 5%;
+  border: 2px solid #b32f2f;
+  border-radius: 2%;
+  box-shadow: 10px 10px 10px #b32f2f;
+  background-color: white;
+}
+
+.input-form{
+  margin-top: 25px;
+  margin: 25px;
+  color: #b32f2f;
+  
 }
 
 .output-field {
   text-align: center;
-  font-size: 65pt;
+  color: #b32f2f;
+  font-size: 45pt;
+}
+
+.output-field h1{
+  margin-left: auto;
+  margin-right: auto;
+  width: 70%;
+}
+
+.form-field{
+  color: #b32f2f;
+  border: 1px solid #b32f2f;
+}
+
+.button{
+  color: #b32f2f;
+  border: 1px solid #b32f2f;
+  background-color: black;
+  width: 100px;
+  height: 30px;
+  box-shadow: 2px 2px 2px #b32f2f;
 }
